Fixed #12, too hight content

--- a/style.css
+++ b/style.css
@@ -220,10 +220,6 @@ article.hentry {
     margin-top: 0;
 }
 
-#primary{
-    margin-top: -60px;
-}
-
 .listpost-content-wrap .entry-content p {
     min-height: 90px;
     margin-bottom: 0px;
